fixed height on leadership div | no overlap when responsive w/ art div

--- a/static/style.css
+++ b/static/style.css
@@ -171,7 +171,7 @@ body {
 
 /* leadership */
 #leadership_box {
-	height: 800px;
+	min-height: 800px;
 }
 
 #leadership {
@@ -185,5 +185,5 @@ body {
 
 /* my art */
 #art {
-	height: 200px;
+	min-height: 200px;
 }
